Add initial user info endpoint infrastructure
- Update Swagger and API Gateway config
- Update UI model interface
- Add hook in Lambda
